samples/_failures_safe/1761071262_f6723f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a61c316d.c: In function ‘main’:
./samples/SAFE/__tmp_a61c316d.c:163:5: error: expected ‘,’ or ‘;’ at end of input
  163 |     for (int i = 0
      |     ^~~
./samples/SAFE/__tmp_a61c316d.c:163:5: error: expected declaration or statement at end of input
